✨ Add new routes and its services
